--- a/src/DF.Telegram.Web/Pages/Media/Chart/Index.cshtml
+++ b/src/DF.Telegram.Web/Pages/Media/Chart/Index.cshtml
@@ -5,14 +5,16 @@
 @model IndexModel
 @inject IStringLocalizer<TelegramResource> L
 @section scripts{
-    <abp-script src="/Pages/Media/Chart/Index.js"></abp-script>
+    @* <abp-script src="/Pages/Media/Chart/Index.js"></abp-script> *@
+    <abp-script src="/dist/main.entry.js"></abp-script>
 }
-<abp-script src="/libs/chart.js/chart.umd.js" />
+@* <abp-script src="/libs/chart.js/chart.umd.js" /> *@
 <abp-card>
     <abp-card-header>
         <abp-card-title>@L["Media:ChartTitle"]</abp-card-title>
     </abp-card-header>
     <abp-card-body>
-        <canvas id="meidaChart"></canvas>
+        @* <canvas id="meidaChart"></canvas> *@
+        <div id="app"></div>
     </abp-card-body>
 </abp-card>
