chore: Update Vue configuration for MediaChart component
- Modified entry points for MediaChart and MediaExternalLink components in webpack.config.js
- Update options for ts-loader in webpack.config.js
- Ignored pnpm-lock.yaml file in DF.Telegram.Web/VueApp directory
- Deleted App.vue and main.ts files in DF.Telegram.Web/VueApp/src directory
- Removed unnecessary code and updated script source path in Index.cshtml
- Deleted shims-vue.d.ts file in DF.Telegram.Web/VueApp/src directory
- Added chart.js as a dependency and vue-tsc as a devDependency in package.json

--- a/src/DF.Telegram.Web/Pages/Media/Chart/Index.cshtml
+++ b/src/DF.Telegram.Web/Pages/Media/Chart/Index.cshtml
@@ -5,16 +5,13 @@
 @model IndexModel
 @inject IStringLocalizer<TelegramResource> L
 @section scripts{
-    @* <abp-script src="/Pages/Media/Chart/Index.js"></abp-script> *@
-    <abp-script src="/dist/main.entry.js"></abp-script>
+    <abp-script src="/dist/MediaChart.entry.js"></abp-script>
 }
-@* <abp-script src="/libs/chart.js/chart.umd.js" /> *@
 <abp-card>
     <abp-card-header>
         <abp-card-title>@L["Media:ChartTitle"]</abp-card-title>
     </abp-card-header>
     <abp-card-body>
-        @* <canvas id="meidaChart"></canvas> *@
         <div id="app"></div>
     </abp-card-body>
 </abp-card>
