chore: Integrate ElementPlus and optimize webpack configuration
- Added AutoImport and Components plugins to webpack.config.js
- Made changes to optimize webpack configuration and mode
- Made updates to Index.cshtml for script sources and card design
- Removed Index.js from Media/Chart folder
- Made changes to Index.cshtml for script sources and div element
- Updated .gitignore to remove dist line and add new file line
- Added MediaChart.entry.js and license file to dist folder
- Deleted Index.js from Media/ExternalLink folder
- Added new license file and made changes to script sources in Index.cshtml
- Made updates to main.ts for ElementPlus imports and usage
- Added scripts and dependencies to package.json
- Made changes to App.vue for buttons, event handlers, textarea, and logic
```

--- a/src/DF.Telegram.Web/Pages/Media/Chart/Index.cshtml
+++ b/src/DF.Telegram.Web/Pages/Media/Chart/Index.cshtml
@@ -6,6 +6,8 @@
 @inject IStringLocalizer<TelegramResource> L
 @section scripts{
     <abp-script src="/dist/MediaChart.entry.js"></abp-script>
+    <abp-script src="/dist/951.entry.js"></abp-script>
+    <abp-script src="/dist/818.entry.js"></abp-script>
 }
 <abp-card>
     <abp-card-header>
