chore: Add AbpRazorWebpackPlugin to improve .cshtml file modification
- Add AbpRazorWebpackPlugin as a new webpack plugin in webpack.config.js
- Create AbpRazorWebpackPlugin/index.js with a class and several methods
- Implement methods in AbpRazorWebpackPlugin/index.js to read, modify, and write file contents
- Apply AbpRazorWebpackPlugin in the done hook of the compiler, modifying .cshtml files by injecting script tags based on entrypoints and assets from the compilation

--- a/src/DF.Telegram.Web/Pages/Media/Chart/Index.cshtml
+++ b/src/DF.Telegram.Web/Pages/Media/Chart/Index.cshtml
@@ -5,9 +5,11 @@
 @model IndexModel
 @inject IStringLocalizer<TelegramResource> L
 @section scripts{
-    <abp-script src="/dist/MediaChart.entry.js"></abp-script>
+    @* MediaChart *@
     <abp-script src="/dist/951.entry.js"></abp-script>
     <abp-script src="/dist/818.entry.js"></abp-script>
+    <abp-script src="/dist/MediaChart.entry.js"></abp-script>
+    @* MediaChart *@
 }
 <abp-card>
     <abp-card-header>
