Add Analytics Page

--- a/src/DF.Telegram.Web/Pages/Media/Chart/Index.cshtml
+++ b/src/DF.Telegram.Web/Pages/Media/Chart/Index.cshtml
@@ -6,7 +6,7 @@
 @inject IStringLocalizer<TelegramResource> L
 @section scripts{
     @* MediaChart *@
-<abp-script src="/dist/MediaChart.entry.js" defer></abp-script>
+<abp-script src="/dist/MediaChart.entry.js"></abp-script>
     @* MediaChart *@
 }
 <abp-card>
