--- a/src/DF.Telegram.Web/Pages/Media/ExternalLink/Index.cshtml
+++ b/src/DF.Telegram.Web/Pages/Media/ExternalLink/Index.cshtml
@@ -6,7 +6,7 @@
 @inject IStringLocalizer<TelegramResource> L
 @section scripts{
     @* MediaExternalLink *@
-<abp-script src="/dist/MediaExternalLink.entry.js" defer></abp-script>
+<abp-script src="/dist/MediaExternalLink.entry.js"></abp-script>
     @* MediaExternalLink *@
 }
 
