--- a/src/DF.Telegram.Web/Pages/Lottery/SpecifyPeriod/Index.cshtml
+++ b/src/DF.Telegram.Web/Pages/Lottery/SpecifyPeriod/Index.cshtml
@@ -3,10 +3,33 @@
 @using Microsoft.Extensions.Localization;
 @model DF.Telegram.Web.Pages.Lottery.SpecifyPeriod.IndexModel
 @inject IStringLocalizer<TelegramResource> L
-@section scripts{
-    @* LotterySpecifyPeriod *@
+@section scripts {
+    <abp-script-bundle>
+        @* LotterySpecifyPeriod *@
+<abp-script src="/dist/140.entry.js"></abp-script>
+<abp-script src="/dist/588.entry.js"></abp-script>
+<abp-script src="/dist/595.entry.js"></abp-script>
+<abp-script src="/dist/643.entry.js"></abp-script>
+<abp-script src="/dist/826.entry.js"></abp-script>
+<abp-script src="/dist/371.entry.js"></abp-script>
+<abp-script src="/dist/240.entry.js"></abp-script>
+<abp-script src="/dist/331.entry.js"></abp-script>
+<abp-script src="/dist/651.entry.js"></abp-script>
+<abp-script src="/dist/385.entry.js"></abp-script>
+<abp-script src="/dist/475.entry.js"></abp-script>
+<abp-script src="/dist/202.entry.js"></abp-script>
+<abp-script src="/dist/27.entry.js"></abp-script>
+<abp-script src="/dist/408.entry.js"></abp-script>
+<abp-script src="/dist/638.entry.js"></abp-script>
+<abp-script src="/dist/699.entry.js"></abp-script>
+<abp-script src="/dist/101.entry.js"></abp-script>
+<abp-script src="/dist/618.entry.js"></abp-script>
+<abp-script src="/dist/314.entry.js"></abp-script>
+<abp-script src="/dist/949.entry.js"></abp-script>
+<abp-script src="/dist/862.entry.js"></abp-script>
 <abp-script src="/dist/LotterySpecifyPeriod.entry.js"></abp-script>
-    @* LotterySpecifyPeriod *@
+        @* LotterySpecifyPeriod *@
+    </abp-script-bundle>
 }
 <abp-card>
     <abp-card-header>
