--- a/src/DF.Telegram.Web/Pages/Media/ExternalLink/Index.cshtml
+++ b/src/DF.Telegram.Web/Pages/Media/ExternalLink/Index.cshtml
@@ -4,10 +4,31 @@
 @using Microsoft.Extensions.Localization
 @model IndexModel
 @inject IStringLocalizer<TelegramResource> L
-@section scripts{
-    @* MediaExternalLink *@
+@section scripts {
+    <abp-script-bundle>
+        @* MediaExternalLink *@
+<abp-script src="/dist/140.entry.js"></abp-script>
+<abp-script src="/dist/588.entry.js"></abp-script>
+<abp-script src="/dist/595.entry.js"></abp-script>
+<abp-script src="/dist/643.entry.js"></abp-script>
+<abp-script src="/dist/826.entry.js"></abp-script>
+<abp-script src="/dist/371.entry.js"></abp-script>
+<abp-script src="/dist/240.entry.js"></abp-script>
+<abp-script src="/dist/331.entry.js"></abp-script>
+<abp-script src="/dist/651.entry.js"></abp-script>
+<abp-script src="/dist/385.entry.js"></abp-script>
+<abp-script src="/dist/475.entry.js"></abp-script>
+<abp-script src="/dist/202.entry.js"></abp-script>
+<abp-script src="/dist/27.entry.js"></abp-script>
+<abp-script src="/dist/408.entry.js"></abp-script>
+<abp-script src="/dist/638.entry.js"></abp-script>
+<abp-script src="/dist/699.entry.js"></abp-script>
+<abp-script src="/dist/101.entry.js"></abp-script>
+<abp-script src="/dist/618.entry.js"></abp-script>
+<abp-script src="/dist/314.entry.js"></abp-script>
 <abp-script src="/dist/MediaExternalLink.entry.js"></abp-script>
-    @* MediaExternalLink *@
+        @* MediaExternalLink *@
+    </abp-script-bundle>
 }
 
 <abp-card>
