--- a/src/DF.Telegram.Web/Pages/Lottery/SpecifyPeriod/Index.cshtml
+++ b/src/DF.Telegram.Web/Pages/Lottery/SpecifyPeriod/Index.cshtml
@@ -4,7 +4,7 @@
 @model DF.Telegram.Web.Pages.Lottery.SpecifyPeriod.IndexModel
 @inject IStringLocalizer<TelegramResource> L
 @section scripts {
-    <abp-script-bundle>
+    <abp-script-bundle name="LotterySpecifyPeriod">
         @* LotterySpecifyPeriod *@
 <abp-script src="/dist/140.entry.js"></abp-script>
 <abp-script src="/dist/588.entry.js"></abp-script>
