--- a/src/DF.Telegram.Web/Pages/Media/Chart/Index.cshtml
+++ b/src/DF.Telegram.Web/Pages/Media/Chart/Index.cshtml
@@ -5,7 +5,7 @@
 @model IndexModel
 @inject IStringLocalizer<TelegramResource> L
 @section scripts {
-    <abp-script-bundle>
+    <abp-script-bundle name="MediaChart">
         @* MediaChart *@
 <abp-script src="/dist/140.entry.js"></abp-script>
 <abp-script src="/dist/588.entry.js"></abp-script>
