--- a/src/DF.Telegram.Web/Pages/Media/Chart/Index.cshtml
+++ b/src/DF.Telegram.Web/Pages/Media/Chart/Index.cshtml
@@ -7,27 +7,28 @@
 @section scripts {
     <abp-script-bundle name="MediaChart">
         @* MediaChart *@
-<abp-script src="/dist/140.entry.js"></abp-script>
-<abp-script src="/dist/588.entry.js"></abp-script>
-<abp-script src="/dist/595.entry.js"></abp-script>
-<abp-script src="/dist/643.entry.js"></abp-script>
-<abp-script src="/dist/826.entry.js"></abp-script>
-<abp-script src="/dist/371.entry.js"></abp-script>
-<abp-script src="/dist/240.entry.js"></abp-script>
-<abp-script src="/dist/331.entry.js"></abp-script>
-<abp-script src="/dist/651.entry.js"></abp-script>
-<abp-script src="/dist/385.entry.js"></abp-script>
-<abp-script src="/dist/475.entry.js"></abp-script>
-<abp-script src="/dist/202.entry.js"></abp-script>
-<abp-script src="/dist/27.entry.js"></abp-script>
-<abp-script src="/dist/408.entry.js"></abp-script>
-<abp-script src="/dist/638.entry.js"></abp-script>
-<abp-script src="/dist/699.entry.js"></abp-script>
-<abp-script src="/dist/101.entry.js"></abp-script>
-<abp-script src="/dist/618.entry.js"></abp-script>
-<abp-script src="/dist/314.entry.js"></abp-script>
-<abp-script src="/dist/949.entry.js"></abp-script>
-<abp-script src="/dist/862.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_ctrl_tinycolor_3_6_1_node_modules_ctrl_tinycolor_dist_module_public-a7e4d6.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_dayjs_1_11_9_node_modules_dayjs_dayjs_min_js-node_modules_pnpm_dayj-a8c611.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_css-loader_6_8_1_webpack_5_88_2_node_modules_css-loader_dist_cjs_js-bdb3e9.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_element-plus_2_3_12_vue_3_3_4_node_modules_element-plus_lib_compone-09dc22.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_element-plus_2_3_12_vue_3_3_4_node_modules_element-plus_lib_compone-87ea0b.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_element-plus_2_3_12_vue_3_3_4_node_modules_element-plus_lib_compone-342fa4.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_element-plus_2_3_12_vue_3_3_4_node_modules_element-plus_lib_compone-dfddbe.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_element-plus_2_3_12_vue_3_3_4_node_modules_element-plus_lib_compone-53527c.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_element-plus_2_3_12_vue_3_3_4_node_modules_element-plus_lib_compone-7e5e52.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_element-plus_2_3_12_vue_3_3_4_node_modules_element-plus_lib_compone-fe17a3.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_element-plus_2_3_12_vue_3_3_4_node_modules_element-plus_lib_compone-9a474c.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_element-plus_2_3_12_vue_3_3_4_node_modules_element-plus_lib_compone-4a10fc.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_element-plus_2_3_12_vue_3_3_4_node_modules_element-plus_lib_index_js.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_element-plus_2_3_12_vue_3_3_4_node_modules_element-plus_lib_plugin_-031b74.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_element-plus_icons-vue_2_1_0_vue_3_3_4_node_modules_element-plus_ic-169417.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_floating-ui_dom_1_5_1_node_modules_floating-ui_dom_dist_floating-ui-a31027.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_lodash_4_17_21_node_modules_lodash_lodash_js.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_vue_compiler-dom_3_3_4_node_modules_vue_compiler-dom_dist_compiler--b20598.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_vue_runtime-dom_3_3_4_node_modules_vue_runtime-dom_dist_runtime-dom-766408.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_vue_shared_3_3_4_node_modules_vue_shared_dist_shared_esm-bundler_js-f0e52f.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_chart_js_4_4_0_node_modules_chart_js_auto_auto_cjs-node_modules_pnp-02a969.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_pnpm_chart_js_4_4_0_node_modules_chart_js_dist_chart_cjs.entry.js"></abp-script>
 <abp-script src="/dist/MediaChart.entry.js"></abp-script>
         @* MediaChart *@
     </abp-script-bundle>
