--- a/src/DF.Telegram.Web/Pages/QueueSink/Index.cshtml
+++ b/src/DF.Telegram.Web/Pages/QueueSink/Index.cshtml
@@ -1,12 +1,11 @@
 ﻿@page
-@using DF.Telegram.Web.Pages.Media.Chart
-@using DF.Telegram.Localization
-@using Microsoft.Extensions.Localization
-@model IndexModel
+@model DF.Telegram.Web.Pages.QueueSink.IndexModel
+@using DF.Telegram.Localization;
+@using Microsoft.Extensions.Localization;
 @inject IStringLocalizer<TelegramResource> L
 @section scripts {
-    <abp-script-bundle name="MediaChart">
-        @* MediaChart *@
+    <abp-script-bundle name="QueueSink">
+        @* QueueSink *@
 <abp-script src="/dist/552.entry.js"></abp-script>
 <abp-script src="/dist/670.entry.js"></abp-script>
 <abp-script src="/dist/97.entry.js"></abp-script>
@@ -24,15 +23,13 @@
 <abp-script src="/dist/486.entry.js"></abp-script>
 <abp-script src="/dist/230.entry.js"></abp-script>
 <abp-script src="/dist/797.entry.js"></abp-script>
-<abp-script src="/dist/708.entry.js"></abp-script>
-<abp-script src="/dist/668.entry.js"></abp-script>
-<abp-script src="/dist/MediaChart.entry.js"></abp-script>
-        @* MediaChart *@
+<abp-script src="/dist/QueueSink.entry.js"></abp-script>
+        @* QueueSink *@
     </abp-script-bundle>
 }
 <abp-card>
     <abp-card-header>
-        <abp-card-title>@L["Media:ChartTitle"]</abp-card-title>
+        <abp-card-title>@L["Lottery:QueueLogTitle"]</abp-card-title>
     </abp-card-header>
     <abp-card-body>
         <div id="app"></div>
