修复已知问题

--- a/src/DFApp.Web/Pages/LogSink/QueueSink/Index.cshtml
+++ b/src/DFApp.Web/Pages/LogSink/QueueSink/Index.cshtml
@@ -6,7 +6,7 @@
 @section scripts {
     <abp-script-bundle name="QueueSink">
         @* QueueSink *@
-<abp-script src="/dist/562.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_element-plus_lib_index_js-node_modules_element-plus_dist_index_css-node_-40d5e1.entry.js"></abp-script>
 <abp-script src="/dist/QueueSink.entry.js"></abp-script>
         @* QueueSink *@
     </abp-script-bundle>
