--- a/src/DFApp.Web/Pages/Media/Chart/Index.cshtml
+++ b/src/DFApp.Web/Pages/Media/Chart/Index.cshtml
@@ -7,8 +7,8 @@
 @section scripts {
     <abp-script-bundle name="MediaChart">
         @* MediaChart *@
-<abp-script src="/dist/562.entry.js"></abp-script>
-<abp-script src="/dist/739.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_element-plus_lib_index_js-node_modules_element-plus_dist_index_css-node_-40d5e1.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_chart_js_auto_auto_cjs.entry.js"></abp-script>
 <abp-script src="/dist/MediaChart.entry.js"></abp-script>
         @* MediaChart *@
     </abp-script-bundle>
