--- a/src/DFApp.Web/Pages/Media/ExternalLink/Index.cshtml
+++ b/src/DFApp.Web/Pages/Media/ExternalLink/Index.cshtml
@@ -7,7 +7,7 @@
 @section scripts {
     <abp-script-bundle name="MediaExternalLink">
         @* MediaExternalLink *@
-<abp-script src="/dist/562.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_element-plus_lib_index_js-node_modules_element-plus_dist_index_css-node_-40d5e1.entry.js"></abp-script>
 <abp-script src="/dist/MediaExternalLink.entry.js"></abp-script>
         @* MediaExternalLink *@
     </abp-script-bundle>
