--- a/src/DFApp.Web/Pages/Lottery/BatchCreate/Index.cshtml
+++ b/src/DFApp.Web/Pages/Lottery/BatchCreate/Index.cshtml
@@ -7,7 +7,7 @@
 @section scripts {
     <abp-script-bundle name="LotterySpecifyPeriod">
         @* LotteryBatchCreate *@
-<abp-script src="/dist/562.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_element-plus_lib_index_js-node_modules_element-plus_dist_index_css-node_-40d5e1.entry.js"></abp-script>
 <abp-script src="/dist/LotteryBatchCreate.entry.js"></abp-script>
         @* LotteryBatchCreate *@
     </abp-script-bundle>
