--- a/src/DFApp.Web/Pages/Lottery/SpecifyPeriod/Index.cshtml
+++ b/src/DFApp.Web/Pages/Lottery/SpecifyPeriod/Index.cshtml
@@ -6,8 +6,8 @@
 @section scripts {
     <abp-script-bundle name="LotterySpecifyPeriod">
         @* LotterySpecifyPeriod *@
-<abp-script src="/dist/562.entry.js"></abp-script>
-<abp-script src="/dist/739.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_element-plus_lib_index_js-node_modules_element-plus_dist_index_css-node_-40d5e1.entry.js"></abp-script>
+<abp-script src="/dist/vendors-node_modules_chart_js_auto_auto_cjs.entry.js"></abp-script>
 <abp-script src="/dist/LotterySpecifyPeriod.entry.js"></abp-script>
         @* LotterySpecifyPeriod *@
     </abp-script-bundle>
