--- a/src/DFApp.Web/Pages/LogSink/SignalRSink/Index.cshtml
+++ b/src/DFApp.Web/Pages/LogSink/SignalRSink/Index.cshtml
@@ -6,8 +6,8 @@
 @section scripts {
     <abp-script-bundle name="SignalRSink">
         @* SignalRSink *@
-<abp-script src="/dist/vendors-node_modules_element-plus_lib_index_js-node_modules_element-plus_dist_index_css-node_-40d5e1.entry.js"></abp-script>
-<abp-script src="/dist/vendors-node_modules_microsoft_signalr_dist_esm_index_js.entry.js"></abp-script>
+<abp-script src="/dist/562.entry.js"></abp-script>
+<abp-script src="/dist/368.entry.js"></abp-script>
 <abp-script src="/dist/SignalRSink.entry.js"></abp-script>
         @* SignalRSink *@
     </abp-script-bundle>
