更新文件上下载功能

--- a/src/DFApp.Web/Pages/FileUploadDownload/Upload/Index.cshtml
+++ b/src/DFApp.Web/Pages/FileUploadDownload/Upload/Index.cshtml
@@ -6,52 +6,19 @@
 @model IndexModel
 @inject IStringLocalizer<DFAppResource> L
 @section scripts {
-    <abp-script src="/Pages/FileUploadDownload/Upload/Index.js"></abp-script>
+    <abp-script-bundle name="FileUpload">
+        @* FileUpload *@
+<abp-script src="/dist/250.entry.js"></abp-script>
+<abp-script src="/dist/354.entry.js"></abp-script>
+<abp-script src="/dist/FileUpload.entry.js"></abp-script>
+        @* FileUpload *@
+    </abp-script-bundle>
 }
-
 <abp-card>
     <abp-card-header>
         <abp-card-title>@L["FileUploadDownload:Upload:Title"]</abp-card-title>
     </abp-card-header>
     <abp-card-body>
-
-        @if (TempData.ContainsKey("Msg"))
-        {
-            <div class="alert alert-success">
-                @TempData["Msg"]
-            </div>
-        }
-        else if(TempData.ContainsKey("MsgFail")){
-            <div class="alert alert-danger">
-                @TempData["MsgFail"]
-            </div>
-        }
-
-        <abp-row>
-            <abp-column>
-                @*                 <h3>Upload File</h3>
-                <hr /> *@
-                <form method="post" enctype="multipart/form-data">
-                    <abp-input asp-for="UploadFileDto.Name"></abp-input>
-
-                    <abp-input asp-for="UploadFileDto.File"></abp-input>
-
-                    <input type="submit" class="btn btn-info" />
-                </form>
-            </abp-column>
-
-            @*             <abp-column style="border-left: 1px dotted gray">
-            <h3>Download File</h3>
-            <hr />
-            <form id="DownloadFile">
-            <div class="form-group">
-            <label for="fileName">Filename</label><span> * </span>
-            <input type="text" id="fileName" name="fileName" class="form-control ">
-            </div>
-
-            <input type="submit" class="btn btn-info" />
-            </form>
-            </abp-column> *@
-        </abp-row>
+        <div id="app"></div>
     </abp-card-body>
 </abp-card>
