修改生成连接的方法

--- a/src/DFApp.Web/Pages/TG/Media/Index.cshtml
+++ b/src/DFApp.Web/Pages/TG/Media/Index.cshtml
@@ -5,7 +5,7 @@
 @model IndexModel
 @inject IStringLocalizer<DFAppResource> L
 @section scripts{
-    <abp-script src="/Pages/Media/Index.js"></abp-script>
+    <abp-script src="/Pages/TG/Media/Index.js"></abp-script>
 }
 
 <abp-card>
