添加后台管理页面

--- a/src/DFApp.Web/Pages/LogSink/QueueSink/Index.cshtml
+++ b/src/DFApp.Web/Pages/LogSink/QueueSink/Index.cshtml
@@ -13,7 +13,7 @@
 }
 <abp-card>
     <abp-card-header>
-        <abp-card-title>@L["Lottery:QueueSinkTitle"]</abp-card-title>
+        <abp-card-title>@L["LogSink:QueueSink:Title"]</abp-card-title>
     </abp-card-header>
     <abp-card-body>
         <div id="app"></div>
