--- a/src/DFApp.Web/Pages/LogSink/SignalRSink/Index.cshtml
+++ b/src/DFApp.Web/Pages/LogSink/SignalRSink/Index.cshtml
@@ -14,7 +14,7 @@
 }
 <abp-card>
     <abp-card-header>
-        <abp-card-title>@L["Lottery:SignalRTitle"]</abp-card-title>
+        <abp-card-title>@L["LogSink:SignalRSink:Title"]</abp-card-title>
     </abp-card-header>
     <abp-card-body>
         <div id="app"></div>
