--- a/src/DFApp.Web/Pages/TG/Media/Chart/Index.cshtml
+++ b/src/DFApp.Web/Pages/TG/Media/Chart/Index.cshtml
@@ -15,7 +15,7 @@
 }
 <abp-card>
     <abp-card-header>
-        <abp-card-title>@L["Media:ChartTitle"]</abp-card-title>
+        <abp-card-title>@L["TG:Media:Chart:Title"]</abp-card-title>
     </abp-card-header>
     <abp-card-body>
         <div id="app"></div>
