修改显示效果

--- a/src/DFApp.Web/Pages/TG/Media/Index.cshtml
+++ b/src/DFApp.Web/Pages/TG/Media/Index.cshtml
@@ -6,6 +6,7 @@
 @inject IStringLocalizer<DFAppResource> L
 @section scripts{
     <abp-script src="/Pages/TG/Media/Index.js"></abp-script>
+    <abp-script src="/Pages/Utils/Utils.js"></abp-script>
 }
 
 <abp-card>
