--- a/src/DFApp.Web/Pages/Bookkeeping/Expenditure/Index.cshtml
+++ b/src/DFApp.Web/Pages/Bookkeeping/Expenditure/Index.cshtml
@@ -17,7 +17,7 @@
                 <abp-card-title>@L["BookkeepingExpenditure:Title"]</abp-card-title>
             </abp-column>
             <abp-column size-md="_6" class="text-end">
-                @if(await AuthorizationService.IsGrantedAnyAsync(DFAppPermissions.BookkeepingExpenditure.Create))
+                @if (await AuthorizationService.IsGrantedAnyAsync(DFAppPermissions.BookkeepingExpenditure.Create))
                 {
                     <abp-button id="NewExpenditureButton"
                                 text="@L["NewBook"].Value"
@@ -26,9 +26,16 @@
                 }
             </abp-column>
         </abp-row>
-        
+
     </abp-card-header>
     <abp-card-body>
-        <abp-table striped-rows="true" id="ExpenditureTable"></abp-table>
+        <abp-table striped-rows="true" id="ExpenditureTable">
+            <tfoot>
+                <tr>
+                    <th colspan="3" style="text-align:right">Total:</th>
+                    <th></th>
+                </tr>
+            </tfoot>
+        </abp-table>
     </abp-card-body>
 </abp-card>
