--- a/src/DFApp.Web/Pages/FileUploadDownload/FileList/Index.cshtml
+++ b/src/DFApp.Web/Pages/FileUploadDownload/FileList/Index.cshtml
@@ -5,6 +5,7 @@
 @inject IStringLocalizer<DFAppResource> L
 @section scripts{
     <abp-script src="/Pages/FileUploadDownload/FileList/Index.js"></abp-script>
+    <abp-script src="/Pages/Utils/Utils.js"></abp-script>
 }
 
 <abp-card>
