--- a/src/DFApp.Web/Pages/TG/Media/ExternalLink/Index.cshtml
+++ b/src/DFApp.Web/Pages/TG/Media/ExternalLink/Index.cshtml
@@ -9,6 +9,7 @@
 @inject IAuthorizationService AuthorizationService
 @section scripts {
     <abp-script src="/Pages/TG/Media/ExternalLink/Index.js"></abp-script>
+    <abp-script src="/Pages/Utils/Utils.js"></abp-script>
 }
 
 <abp-card>
