添加全部删除功能

--- a/src/DFApp.Web/Pages/Aria2/Index.cshtml
+++ b/src/DFApp.Web/Pages/Aria2/Index.cshtml
@@ -17,6 +17,14 @@
             <abp-column size-md="_6">
                 <abp-card-title>@L["Aria2:Title"]</abp-card-title>
             </abp-column>
+            <abp-column size-md="_6" class="text-end">
+                @if (await AuthorizationService.IsGrantedAnyAsync(DFAppPermissions.Aria2.Delete))
+                {
+                    <abp-button id="DeleteAllButton"
+                                text="@L["Aria2:Button:DeleteAll"].Value"
+                                button-type="Danger" />
+                }
+            </abp-column>
         </abp-row>
     </abp-card-header>
     <abp-card-body>
