更新记账支出页面和本地化文件
- 添加“添加”按钮本地化文本
- 调整表格列数和总计显示
- 移除不必要的ID列
- 更新JavaScript以匹配新列结构
- 修复总计计算错误

Generated by DeepSeek

--- a/src/DFApp.Web/Pages/Bookkeeping/Expenditure/Index.cshtml
+++ b/src/DFApp.Web/Pages/Bookkeeping/Expenditure/Index.cshtml
@@ -20,7 +20,7 @@
                 @if (await AuthorizationService.IsGrantedAnyAsync(DFAppPermissions.BookkeepingExpenditure.Create))
                 {
                     <abp-button id="NewExpenditureButton"
-                                text="@L["NewBook"].Value"
+                                text="@L["BookkeepingExpenditure:Button:Add"].Value"
                                 icon="plus"
                                 button-type="Primary" />
                 }
@@ -32,7 +32,7 @@
         <abp-table striped-rows="true" id="ExpenditureTable">
             <tfoot>
                 <tr>
-                    <th colspan="3" style="text-align:right">Total:</th>
+                    <th colspan="2" style="text-align:right">Total:</th>
                     <th></th>
                 </tr>
             </tfoot>
