--- a/src/DFApp.Web/Pages/Index.css
+++ b/src/DFApp.Web/Pages/Index.css
@@ -1,3 +1,24 @@
 body {
-    
+
+    /* Index.css */
+    .bg-primary {
+        background-color: #007bff !important;
+    }
+
+    .shadow-lg {
+        box-shadow: 0 1rem 3rem rgba(0, 0, 0, .175) !important;
+    }
+
+    .rounded {
+        border-radius: .25rem !important;
+    }
+
+    .p-3 {
+        padding: 1rem !important;
+    }
+
+    .mb-0 {
+        margin-bottom: 0 !important;
+    }
+
 }
