添加获取所有外部链接功能并修复删除确认消息
- 在IAria2Service接口中添加GetAllExternalLinks方法
- 在Aria2Service类中实现GetAllExternalLinks方法
- 更新本地化文件以支持新的按钮文本
- 在Index.cshtml中添加获取所有链接按钮
- 修复删除确认消息中的ID显示问题

Generated by DeepSeek

--- a/src/DFApp.Web/Pages/Aria2/Index.cshtml
+++ b/src/DFApp.Web/Pages/Aria2/Index.cshtml
@@ -18,11 +18,13 @@
                 <abp-card-title>@L["Aria2:Title"]</abp-card-title>
             </abp-column>
             <abp-column size-md="_6" class="text-end">
+                @if (await AuthorizationService.IsGrantedAnyAsync(DFAppPermissions.Aria2.Link))
+                {
+                    <abp-button id="GetAllLinksButton" text="@L["Aria2:Button:GetAllLinks"].Value" button-type="Primary" />
+                }
                 @if (await AuthorizationService.IsGrantedAnyAsync(DFAppPermissions.Aria2.Delete))
                 {
-                    <abp-button id="DeleteAllButton"
-                                text="@L["Aria2:Button:DeleteAll"].Value"
-                                button-type="Danger" />
+                    <abp-button id="DeleteAllButton" text="@L["Aria2:Button:DeleteAll"].Value" button-type="Danger" />
                 }
             </abp-column>
         </abp-row>
