--- a/src/DFApp.Web/Pages/Index.cshtml
+++ b/src/DFApp.Web/Pages/Index.cshtml
@@ -1,10 +1,13 @@
 ﻿@page
 @using Microsoft.AspNetCore.Mvc.Localization
 @using DFApp.Localization
+@using Volo.Abp.Authorization.Permissions
 @using Volo.Abp.Users
+@using static DFApp.Permissions.DFAppPermissions
 @model DFApp.Web.Pages.IndexModel
 @inject IHtmlLocalizer<DFAppResource> L
 @inject ICurrentUser CurrentUser
+@inject IPermissionChecker PermissionChecker
 @section styles {
 <abp-style src="/Pages/Index.css" />
 }
@@ -25,7 +28,7 @@
             <a abp-button="Primary" href="~/Account/Login"><i class="fa fa-sign-in"></i> @L["Login"]</a>
         }
 
-        @if (CurrentUser.IsAuthenticated)
+        @if (CurrentUser.IsAuthenticated && await PermissionChecker.IsGrantedAsync(ConfigurationInfo.Default))
         {
             <!-- New Display Box for Remaining Disk Space -->
             <div class="mt-4 p-3 bg-primary text-white rounded shadow-lg">
