--- a/src/DFApp.Web/Pages/Lottery/Statistics/Index.cshtml
+++ b/src/DFApp.Web/Pages/Lottery/Statistics/Index.cshtml
@@ -3,20 +3,32 @@
 @using Microsoft.Extensions.Localization;
 @model DFApp.Web.Pages.Lottery.Statistics.IndexModel
 @inject IStringLocalizer<DFAppResource> L
+
 @section scripts {
-    <abp-script-bundle name="LotteryStatistics">
-        @* LotteryStatistics *@
-<abp-script src="/dist/963.entry.js"></abp-script>
-<abp-script src="/dist/798.entry.js"></abp-script>
-<abp-script src="/dist/LotteryStatistics.entry.js"></abp-script>
-        @* LotteryStatistics *@
-    </abp-script-bundle>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="~/Pages/Lottery/Statistics/index.js"></script>
 }
+
 <abp-card>
     <abp-card-header>
         <abp-card-title>@L["Lottery:LotteryStatisticsTitle"]</abp-card-title>
     </abp-card-header>
     <abp-card-body>
-        <div id="app"></div>
+        <div class="select-area mb-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <select id="lotteryType" class="form-select" asp-items="@Model.LotteryTypes"></select>
+                </div>
+                <div class="col-md-4">
+                    <input type="text" id="purchasedPeriod" class="form-control" placeholder="购买期号" />
+                </div>
+                <div class="col-md-4">
+                    <input type="text" id="winningPeriod" class="form-control" placeholder="开奖期号" />
+                </div>
+            </div>
+        </div>
+        <div class="chart-container" style="height: 70vh;">
+            <canvas id="statisticsChart"></canvas>
+        </div>
     </abp-card-body>
 </abp-card>
