新增删除指定期号数据功能，更新相关服务和前端页面

--- a/src/DFApp.Web/Pages/Lottery/Simulation/Index.cshtml
+++ b/src/DFApp.Web/Pages/Lottery/Simulation/Index.cshtml
@@ -20,6 +20,11 @@
             <abp-column size-md="_6" class="text-end">
                 @if (await AuthorizationService.IsGrantedAsync(DFAppPermissions.Lottery.Create))
                 {
+                    <abp-button id="DeleteByTermNumberButton"
+                               text="@L["LotterySimulation:Button:DeleteByTermNumber"].Value"
+                               icon="trash"
+                               button-type="Danger"
+                               class="me-2" />
                     <abp-button id="StatisticsButton"
                                text="@L["LotterySimulation:Button:Statistics"].Value"
                                icon="chart-line"
