新增删除指定期号的 DTO 和相关页面，优化随机号码生成模态框

--- a/src/DFApp.Web/Pages/Lottery/Simulation/DeleteByTermNumberModal.cshtml
+++ b/src/DFApp.Web/Pages/Lottery/Simulation/DeleteByTermNumberModal.cshtml
@@ -1,16 +1,19 @@
 @page
 @using DFApp.Localization
 @using Microsoft.Extensions.Localization
+@using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Modal
 @model DFApp.Web.Pages.Lottery.Simulation.DeleteByTermNumberModalModel
-@using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Modal;
 @inject IStringLocalizer<DFAppResource> L
+@{
+    Layout = null;
+}
 
-<form asp-page="/Lottery/Simulation/DeleteByTermNumberModal">
+<abp-dynamic-form abp-model="Input" asp-page="/Lottery/Simulation/DeleteByTermNumberModal">
     <abp-modal>
         <abp-modal-header title="@L["LotterySimulation:DeleteByTermNumber"].Value"></abp-modal-header>
         <abp-modal-body>
-            <abp-input asp-for="TermNumber" label="@L["LotterySimulation:TermNumber"].Value"/>
+            <abp-form-content />
         </abp-modal-body>
         <abp-modal-footer buttons="@(AbpModalButtons.Cancel|AbpModalButtons.Save)"></abp-modal-footer>
     </abp-modal>
-</form>
+</abp-dynamic-form>
