新增K8彩票模拟页面及相关功能，包括生成、统计和数据表展示

--- a/src/DFApp.Web/Pages/Lottery/Simulation/K8/Index.cshtml
+++ b/src/DFApp.Web/Pages/Lottery/Simulation/K8/Index.cshtml
@@ -3,13 +3,13 @@
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.Extensions.Localization
 @using DFApp.Permissions
-@model DFApp.Web.Pages.Lottery.Simulation.K8IndexModel
+@model DFApp.Web.Pages.Lottery.Simulation.K8.K8IndexModel
 
 @inject IStringLocalizer<DFAppResource> L
 @inject IAuthorizationService AuthorizationService
 
 @section scripts{
-    <abp-script src="/Pages/Lottery/Simulation/k8index.js"></abp-script>
+    <abp-script src="/Pages/Lottery/Simulation/K8/index.js"></abp-script>
 }
 
 <abp-card>
