--- a/src/DFApp.Web/Pages/Lottery/Simulation/K8/K8Statistics.cshtml
+++ b/src/DFApp.Web/Pages/Lottery/Simulation/K8/K8Statistics.cshtml
@@ -2,13 +2,13 @@
 @using DFApp.Localization
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.Extensions.Localization
-@model DFApp.Web.Pages.Lottery.Simulation.K8StatisticsModel
+@model DFApp.Web.Pages.Lottery.Simulation.K8.K8StatisticsModel
 
 @inject IStringLocalizer<DFAppResource> L
 
 @section scripts{
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <abp-script src="/Pages/Lottery/Simulation/k8statistics.js"/>
+    <abp-script src="/Pages/Lottery/Simulation/K8/k8statistics.js"/>
 }
 
 <abp-card>
